gkek8s/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: steamapp-clusterip-service
                port: 
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-service
                port: 
                  number: 3001
